lintian (2.5.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - missing-build-dependency-for-dh-addon

  * checks/*:
    + [JW] Replace common_data.pm with Lintian::Check.
  * checks/binaries:
    + [JW] Allow binaries to use "/usr/lib/$srcpkg/" in RPATHs.
      (Closes: #642092)
  * checks/changes-file.desc:
    + [NT] Added the "precise" to the list of Ubuntu distributions.
      Thanks to Loïc Minier for the patch.
  * checks/common_data.pm:
    + [JW] Merged into Lintian::Check.
  * checks/cruft:
    + [NT] Escape path when using them in regexes.  (Closes: #642902)
  * checks/dehelper{,.desc}:
    + [JW,NT] Check for versioned dependencies for some dh_commands.
      (Closes: #641035)
    + [JW] Detect missing dependencies for using dh sequences.
      (Closes: #613327)
    + [JW] Parse continuation lines in d/rules.
    + [JW] Only emit brace-expansion-in-debhelper-config-file at most
      once per file.  (Closes: #644344)
    + [JW] Replaced "=" with " => " in the tag extra for missing-
      build-dependency-for-dh_-command to improve readability.  This
      breaks overrides, but according to lintian.d.o there are none
      of these.  (Closes: #644339)
  * checks/fields:
    + [NT] Fixed source-field-does-not-match-pkg-name.
  * checks/files{,.desc}:
    + [JW] Suggest the usage of "-delete" rather than "| xargs rm -f".
      (Closes: #641983)
    + [JW] Improve "linked against libvga.so" test.  This avoid
      setuid-binary false-positives.  (Closes: #642038)
    + [NT] Skip package-contains-no-arch-dependent-files for empty
      packages.  (Closes: #642339)
  * checks/rules:
    + [JW] Fixed false negative "missing-build-dependency" when using
      "dh --with=X" rather than "dh --with X".  (Closes: #643714)
    + [NT] Do not emit missing-build-dependency for missing dh sequences,
      since the new tag will handle those.
    + [JW] Parse continuation lines in d/rules.  (Closes: #644021)
  * checks/scripts: