@@ -288,3 +288,22 @@ Certainty: possible
 Info: The package build-depends on cdbs, but does not include any cdbs
  files in <tt>debian/rules</tt>.
 
+Tag: python-depends-but-no-python-helper
+Severity: serious
+Certainty: possible
+Experimental: yes
+Info: The source package declares a dependency on ${python:Depends} in the
+ given binary package's debian/control entry.  However, debian/rules doesn't
+ call any helper that would generate this substitution variable.
+ .
+ When using debhelper compatibility level below 9, dh will call dh_pysupport by
+ default if it's installed, but the build dependency on python-support is still
+ necessary.
+
+Tag: python3-depends-but-no-python3-helper
+Severity: serious
+Certainty: possible
+Experimental: yes
+Info: The source package declares a dependency on ${python3:Depends} in the
+ given binary package's debian/control entry.  However, debian/rules doesn't
+ call any helper that would generate this substitution variable.
